feat: Production-ready deployment improvements
- Added dynamic CORS configuration using FRONTEND_URL env variable
- Added health check endpoints (/ and /api/health)
- Added global error handler for better error responses
- Added 404 handler for undefined routes
- Updated server to listen on 0.0.0.0 for Railway/cloud deployment
- Added environment variable checker script
- Updated .env.example with FRONTEND_URL and better documentation
- Server now logs environment and frontend URL on startup
- Ready for seamless Railway deployment

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,9 +2,12 @@
 PORT=5000
 NODE_ENV=development
 
+# Frontend URL (for CORS) - IMPORTANT FOR PRODUCTION
+FRONTEND_URL=http://localhost:3000
+
 # Database Connection
 # Replace with your MongoDB connection string
-MONGO_URI=mongodb+srv://<username>:<password>@cluster.mongodb.net/pollsync
+MONGODB_URI=mongodb+srv://<username>:<password>@cluster.mongodb.net/pollsync
 
 # Security
 # Replace with a long random string for JWT signing
