feat: Enforce authentication before payment & improve security
CRITICAL SECURITY CHANGES:
- REQUIRE user login before any payment can be made
- Remove guest payment functionality completely
- Add authentication check in payment controller
- Update pricing page to redirect non-logged-in users to register
- Save selected plan in localStorage for seamless flow
- Restore selected plan after user logs in
- Show sign-up prompt instead of payment form for guests
- Update payment routes to use protect middleware
- Add user validation in Kopokopo controller
- Ensure all transactions are linked to authenticated users

PAYMENT FLOW:
1. User selects plan on pricing page
2. If not logged in -> redirect to register/login
3. After login -> return to pricing with plan selected
4. Complete payment (now guaranteed to have user account)
5. Package added to user's electionCredits array
6. Redirect to create election

This ensures:
- No lost payments (all linked to accounts)
- Better fraud prevention
- Proper transaction tracking
- Accurate user credit management

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,6 +4,9 @@ NODE_ENV=development
 
 # Frontend URL (for CORS) - IMPORTANT FOR PRODUCTION
 FRONTEND_URL=http://localhost:3000
+# Additional allowed origins (comma-separated) - Optional
+# Example: ALLOWED_ORIGINS=https://yourdomain.com,https://preview.yourdomain.com
+ALLOWED_ORIGINS=
 
 # Database Connection
 # Replace with your MongoDB connection string
