--- a/server/.env.example
+++ b/server/.env.example
@@ -36,5 +36,5 @@ KOPOKOPO_CALLBACK_URL=https://your-domain.com/api/payment/callback
 # Email Configuration (Gmail with Nodemailer)
 # Use your Gmail address and App Password (not regular password)
 # Generate App Password: https://myaccount.google.com/apppasswords
-EMAIL_USER=kingscreationagency635@gmail.com
-EMAIL_APP_PASSWORD=lrql yrrr lybq wbus
+EMAIL_USER=your_email@gmail.com
+EMAIL_APP_PASSWORD=your_gmail_app_password_here
