Add AI features with pay-per-use model: AI Insights (10 credits), Fraud Detection (10 credits), Free Chatbot (5 msgs/day)

--- a/server/.env.example
+++ b/server/.env.example
@@ -38,3 +38,7 @@ KOPOKOPO_CALLBACK_URL=https://your-domain.com/api/payment/callback
 # Generate App Password: https://myaccount.google.com/apppasswords
 EMAIL_USER=your_email@gmail.com
 EMAIL_APP_PASSWORD=your_gmail_app_password_here
+
+# Gemini AI Configuration
+# Get your free API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
